--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,13 @@
             "type": "java",
             "name": "CodeLens (Launch) - CrudAppApplication",
             "request": "launch",
+            "mainClass": "com.afonsosProjects.Crud_App.services.CrudAppApplication",
+            "projectName": "Crud_App"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - CrudAppApplication",
+            "request": "launch",
             "mainClass": "com.afonsosProjects.Crud_App.CrudAppApplication",
             "projectName": "Crud_App"
         }
